# smritea-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  SDKs.md
csharp/: .editorconfig  AddOptions.cs  Exceptions.cs  GlobalUsings.cs  Memory.cs  MemoryScope.cs  Models.cs  README.md  RelativeStanding.cs  Scope.cs  SearchOptions.cs  SearchResult.cs  Smritea.Sdk.csproj  Smritea.Sdk.sln  SmriteaAuthException.cs  SmriteaClient.cs  SmriteaException.cs  (+5 more)
python/: README.md  pyproject.toml
python/src/smritea/: __init__.py  client.py  exceptions.py  types.py
python/src/smritea/_internal/: __init__.py
python/src/smritea/_internal/autogen/smritea_cloud_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python/src/smritea/_internal/autogen/smritea_cloud_sdk/api/: __init__.py  sdk_memory_api.py
python/src/smritea/_internal/autogen/smritea_cloud_sdk/models/: __init__.py  commondto_api_error.py  commondto_entity_extraction_config.py  commondto_fact_extraction_config.py  commondto_memory_scope.py  commondto_persona_domain_config.py  commondto_persona_extraction_config.py  commondto_relative_standing_config.py  errors_app_error.py  errors_error_code.py  explain_stage_trace.py  explain_step_trace.py  explain_trace.py  memory_create_memory_request.py  memory_create_memory_response.py  memory_memory_response.py  memory_search_memories_response.py  memory_search_memory_request.py  memory_search_memory_response.py  memory_search_memory_result.py  model_enums_reranker_type.py  model_enums_search_method.py  search_strategies_search_method.py
python/tests/: test_client.py
(+222 files in other folders)
