[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smritea-sdk"
version = "0.1.1"
description = "Python SDK for smritea AI memory system"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "smritea.ai", email = "support@smritea.ai" },
]
requires-python = ">=3.9"
dependencies = [
    "urllib3>=2.0",
    "python-dateutil>=2.8",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "responses>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smritea"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    "src/smritea/_internal/autogen",
]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["smritea"]
